# gigecamera

./: .gitignore  OCR.md  README.md  package.json
cpp/: CMakeLists.txt  camerasim.cpp  gige.cpp  grabpylon.cpp  main.cpp
cpp/cmake/: camerasim  main
lib/: imageing.js  main.js  ocr.js  variables.js  worker.js
lib/classes/: BufferExtension.js  Commands.js  Constants.js  Device.js  GVCP.js  GVS.js  GVSP.js  Image.js  Messages.js  SimpleSAX.js
lib/classes/commands/: ACTION.js  Command.js  DISCOVERY.js  DISCOVERY_CMD.js  GVCP_CMD.js  PACKETRESEND.js  READMEM.js  READREG.js  WRITEMEM.js  WRITEREG.js
lib/classes/genapi/: GenAPI.js
lib/classes/genapi/types/: Converter.js  IntConverter.js  IntReg.js  IntSwissKnife.js  Integer.js  MaskedIntReg.js  StringReg.js  SwissKnife.js  Type.js  index.js
lib/classes/messages/: ACTION_ACK.js  DATA_LEADER.js  DATA_PAYLOAD.js  DATA_TRAILER.js  DISCOVERY_ACK.js  GVCP_ACK.js  GVSP.js  GVSP_ACK.js  READMEM_ACK.js  READREG_ACK.js  WRITEMEM_ACK.js  WRITEREG_ACK.js
test/: DISCOVERY_CMD_test.js  capabilities.js  ccp.js  device.js  discover.js  genapi.js  image-with-mat.js  image.js  mat-test.js  udp.js
